--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// ModelMapper para mapeo de objetos
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
+	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'
 }
 
 tasks.named('test') {
