--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// ModelMapper para mapeo de objetos
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
-	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.4'
+	// Security
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
